# Correrender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-linux-vcpkg.sh  build-linux.sh  build-msvc.bat  build-windows-msys2.sh  build-windows.bat  build.sh  shell.nix  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-linux.yml  build-msys2.yml  build-ubuntu.yml  build-vcpkg.yml
CMake/: FindSkia.cmake  Findvkvg.cmake
Data/Shaders/: Blit.glsl  GammaCorrection.glsl  GaussianBlur.glsl  Mesh.glsl  ResolveMSAA.glsl  WhiteSolid.glsl
Data/Shaders/Calculators/: BinaryOperatorCalculator.glsl  CopyImageToBuffer.glsl  DKL.glsl  EnsembleMeanCalculator.glsl  EnsembleSpreadCalculator.glsl  GaussianBlur3D.glsl  SetPredicateCalculator.glsl
Data/Shaders/Correlation/: CombineCorrelationMembers.cu  CombineCorrelationMembers.glsl  CopyDecoderOutput.glsl  CorrelationMain.glsl  KendallRankCorrelation.glsl  MutualInformationBinned.glsl  MutualInformationKraskov.cu  MutualInformationKraskov.glsl  PearsonCorrelation.glsl  RequestsBuffer.glsl  ScalarFields.glsl  SpearmanRankCorrelation.glsl  UnpackStencil.glsl  WriteGridPositions.glsl
Data/Shaders/Diagram/: BlitPremulAlpha.glsl  ConnectingLine.glsl  SelectionBox.glsl  ShadowCircle.glsl  ShadowRect.glsl  TimeSeriesBlit.glsl
Data/Shaders/Histogram/: ComputeHistogram.glsl  ComputeHistogramDivide.glsl  ComputeHistogramMax.glsl  DivergentMinMax.glsl  MinMaxReduce.glsl  MinMaxWrite.glsl
Data/Shaders/Renderers/: Blending.glsl  DomainOutline.glsl  RayIntersectionTests.glsl  Slice.glsl  Sphere.glsl  UniformData.glsl  WorldMap.glsl
Data/Shaders/Similarity/: CombineEnsembles.cu  CombineEnsembles.glsl  MutualInformation.cu  MutualInformationBinned.glsl  MutualInformationKraskov.cu  MutualInformationKraskov.glsl  PearsonCorrelation.glsl  SpearmanRankCorrelation.glsl
Data/Shaders/TF/: AdamOptimizer.glsl  DvrAdjoint.glsl  DvrForward.glsl  Loss.glsl  NormalEquations.glsl  Optimizer.glsl  ResidualColorCalculator.glsl  SGD.glsl  SmoothingPrior.glsl
Data/Shaders/Utils/: Lighting.glsl  TransferFunction.glsl
Data/Shaders/VMLP/: ActivationFunctions.glsl  Encodings.glsl  Network.glsl  NetworkFused.glsl  NetworkFusedLayer.glsl  Symmetrizer.glsl
docs/license-libraries/: README.txt
replicability/: README.md
scripts/: generate_synth_box_ensembles.py  similarity.py
src/: Main.cpp  MainApp.cpp  MainApp.hpp  MainAppState.cpp
src/Calculators/: BinaryOperatorCalculator.cpp  BinaryOperatorCalculator.hpp  Calculator.cpp  Calculator.hpp  Correlation.cpp  Correlation.hpp  CorrelationCalculator.cpp  CorrelationCalculator.hpp  CorrelationDefines.hpp  CorrelationMatrix.hpp  DKL.cpp  DKL.hpp  DKLCalculator.cpp  DKLCalculator.hpp  DeepLearningCorrelationCalculator.cpp  DeepLearningCorrelationCalculator.hpp  DeepLearningCudaCorrelationCalculator.cpp  DeepLearningCudaCorrelationCalculator.hpp  DeepLearningCudaSimilarityCalculator.cpp  DeepLearningCudaSimilarityCalculator.hpp  DeviceThreadInfo.cpp  DeviceThreadInfo.hpp  EnsembleMeanCalculator.cpp  EnsembleMeanCalculator.hpp  EnsembleSpreadCalculator.cpp  EnsembleSpreadCalculator.hpp  EnsembleVarianceCalculator.cpp  EnsembleVarianceCalculator.hpp  MutualInformation.cpp  MutualInformation.cu  MutualInformation.cuh  MutualInformation.hpp  NoiseReductionCalculator.cpp  NoiseReductionCalculator.hpp  PointPicker.cpp  PointPicker.hpp  PyTorchCorrelationCalculator.cpp  PyTorchCorrelationCalculator.hpp  PyTorchSimilarityCalculator.cpp  PyTorchSimilarityCalculator.hpp  (+27 more)
src/Calculators/VMLP/: Encoding.cpp  Encoding.hpp  Format.hpp  Network.cpp  Network.hpp  Symmetrizer.cpp  Symmetrizer.hpp
src/Export/: CvolWriter.cpp  CvolWriter.hpp  NetCdfWriter.cpp  NetCdfWriter.hpp  VolumeWriter.hpp  WriteTetMesh.cpp  WriteTetMesh.hpp
src/Loaders/: AmiraMeshLoader.cpp  AmiraMeshLoader.hpp  CtlLoader.cpp  CtlLoader.hpp  CvolLoader.cpp  CvolLoader.hpp  DatRawFileLoader.cpp  DatRawFileLoader.hpp  DataSet.cpp  DataSet.hpp  DataSetList.cpp  DataSetList.hpp  FieldFileLoader.cpp  FieldFileLoader.hpp  GribLoader.cpp  GribLoader.hpp  Hdf5Loader.cpp  Hdf5Loader.hpp  LoadersUtil.cpp  LoadersUtil.hpp  MhdRawFileLoader.cpp  MhdRawFileLoader.hpp  NetCdfLoader.cpp  NetCdfLoader.hpp  NiftiLoader.cpp  NiftiLoader.hpp  RbcBinFileLoader.cpp  RbcBinFileLoader.hpp  StructuredGridVtkLoader.cpp  StructuredGridVtkLoader.hpp  VolumeLoader.hpp  VtkXmlLoader.cpp  VtkXmlLoader.hpp  WriteMesh.cpp  WriteMesh.hpp  ZarrLoader.cpp  ZarrLoader.hpp
src/Loaders/base64/: base64.h
src/Optimization/: CopyFieldImages.cpp  CopyFieldImages.hpp  OptDefines.hpp  OptimizerPass.cpp  OptimizerPass.hpp  SmoothingPriorLossPass.cpp  SmoothingPriorLossPass.hpp  TFOptimization.cpp  TFOptimization.hpp  TFOptimizer.cpp  TFOptimizer.hpp
src/Optimization/DiffDVR/: DvrAdjointPass.cpp  DvrAdjointPass.hpp  DvrForwardPass.cpp  DvrForwardPass.hpp  LossPass.cpp  LossPass.hpp  OptimizerPass.hpp  SmoothingPriorLossPass.hpp  TFOptimizerDiffDvr.cpp  TFOptimizerDiffDvr.hpp
src/Optimization/GD/: GradientPass.cpp  GradientPass.hpp  OptimizerPass.cpp  OptimizerPass.hpp  TFOptimizerGD.cpp  (+1 more)
src/Renderers/: DomainOutlineRenderer.cpp  DomainOutlineRenderer.hpp  DvrRenderer.cpp  DvrRenderer.hpp  IsoSurfaceRasterizer.cpp  IsoSurfaceRasterizer.hpp  IsoSurfaceRayCastingRenderer.cpp  IsoSurfaceRayCastingRenderer.hpp  IsoSurfaces.hpp  Renderer.cpp  Renderer.hpp  RenderingModes.hpp  SceneData.cpp  SceneData.hpp  SliceRenderer.cpp  SliceRenderer.hpp  WorldMapRenderer.cpp  WorldMapRenderer.hpp
src/Replicability/: ReplicabilityState.hpp
src/Utils/: AutomaticPerformanceMeasurer.cpp  AutomaticPerformanceMeasurer.hpp  CurlWrapper.cpp  CurlWrapper.hpp  Download.cpp  Download.hpp  InternalState.cpp  InternalState.hpp  Normalization.cpp  Normalization.hpp  RenderDocDebugger.cpp  RenderDocDebugger.hpp  Semaphore.hpp  VecStringConversion.hpp
src/Volume/: CopyImageToBuffer.cpp  CopyImageToBuffer.hpp  DistanceMetrics.hpp  FieldAccess.hpp  FieldType.hpp  Histogram.cpp  Histogram.hpp  VolumeData.cpp  VolumeData.hpp
src/Widgets/: DataView.cpp  DataView.hpp  ViewManager.cpp  ViewManager.hpp
(+103 files in other folders)
